--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,8 +6,8 @@ h1 {
   font-weight: bolder;
   font-size: 3rem;
   text-align: center;
-  padding: .5rem;
-  margin-top: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1.4rem;
 }
 
 label[for="citySearch"] {
@@ -19,11 +19,14 @@ label[for="citySearch"] {
   margin-top: 1rem;
 }
 
-#cityName {
+#cityNameDate {
   font-weight: bolder;
   font-size: 2.5rem;
-  padding-left: 1rem;
-  padding-bottom: 1rem;
+}
+
+.card {
+  border-width: 5px;
+  border-color:darkslategray;
 }
 
 .card-text {
@@ -39,7 +42,7 @@ label[for="citySearch"] {
 #fiveDayForecast {
   font-weight: bolder;
   font-size: 2.5rem;
-  padding: 1rem;
+  margin-top: 1.5rem;
 }
 
 #cardContainer {
@@ -47,7 +50,7 @@ label[for="citySearch"] {
   flex-wrap: wrap;
 }
 
-#forecastOne, #forecastTwo, #forecastThree, #forecastFour, #forecastFive {
+.forecastCard {
   margin:1rem;
   max-width: fit-content;
 }
@@ -56,7 +59,7 @@ label[for="citySearch"] {
   #cardContainer {
     flex-direction: column;
   }
-  #forecastOne, #forecastTwo, #forecastThree, #forecastFour, #forecastFive {
+  .forecastCard {
     max-width:none;
   }
 }
